Refactored RentalDTO to use ids for car and user
